# naive-http-bench

./: README  README.md  server.crt  server.key
go/: go.mod  main.go
greenbean/: server.c
kestral/Controllers/: WeatherForecastController.fs
kestral/Properties/: launchSettings.json
kestrel/: Program.fs  WeatherForecast.fs
redbean/: .gitignore
redbean/srv/: .init.lua
redbean/usr/share/ssl/root/: https.pem
spring/: build.gradle
spring/src/main/java/com/example/restservice/: RestServiceApplication.java
toit/: http.toit
userver/: .gitignore  CMakeLists.txt  Makefile  secdist.json  static_config.yaml
userver/src/: main.cpp
